# uneval

./: README.md  paper.bib  paper.md  pyproject.toml
.github/workflows/: publish.yml
docs/: api.rst  architecture.rst  conf.py  index.rst  usage.rst
src/uneval/: __init__.py  core.py
tests/: __init__.py  test_core.py
