[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uneval"
version = "0.1.0"
description = "Declarative Python source code generation from objects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/uneval"]
